--- a/app/views/topics/index.haml
+++ b/app/views/topics/index.haml
@@ -20,3 +20,9 @@
 
 
 = link_to 'New Topic', new_topic_path
+
+- xys = PointMath.new(@topics).topic_xys
+- str = PointToSvg.new(xys).to_s
+%svg{height: "190", version: "1.1", xmlns: "http://www.w3.org/2000/svg"}
+  %polygon{points: str, style: "fill:tan;stroke:brown;stroke-width:3;fill-rule:evenodd;"}
+
